--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.2",
     "stripe": "^14.7.0",
     "unzipper": "^0.10.14",
     "uuid": "^9.0.1"
